# micro

./: CMakeLists.txt  LICENSE  readme.md
src/: main.c
src/micro/interpreter/: chunk.c  chunk.h  code_to_single_file.sh  common.h  debug.c  debug.h  gc.c  gc.h  list.h  memory.c  memory.h  native_math.c  native_registry.c  native_registry.h  obj_native.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/micro/interpreter/compiler/: compiler.c  compiler.h
src/tests/: scratch.micro  test.micro
src/tests/pass/: asmbinary.micro  binary.micro  classesandclojures.micro  goto.micro  jumps.micro  labeledloopscontrol.micro  microasm.micro  perf.micro
